# CloudSufi-QnA-App

./: .env.example  .gitignore  README.md  config.py  conftest.py  main.py  pyproject.toml  requirements.txt
services/: embeddings.py  generation_service.py  ingestion_service.py  prompts.py  retrieval_service.py
tests/: conftest.py  constants.py  test_config.py  test_embeddings.py  test_generation_service.py  test_ingestion_service.py  test_integration.py  test_prompts.py  test_retrieval_service.py
