[project]
name = "cloudsufi-qna-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "langchain>=0.3,<0.4",
    "langchain-chroma>=0.1.4,<0.2",
    "langchain-community>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-groq>=0.2,<0.3",
    "langchain-huggingface>=0.1,<0.2",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.40.0",
]
