[project]
name = "cloudsufi-doc-qa"
version = "0.1.0"
description = "RAG-based Document Q&A system — CloudSufi Senior AI/ML Engineer Assignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "langchain>=0.3,<0.4",
    "langchain-chroma>=0.1.4,<0.2",
    "langchain-community>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-groq>=0.2,<0.3",
    "langchain-huggingface>=0.1,<0.2",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.40.0",
]

[tool.uv]
# uv automatically creates and manages .venv — no manual activation needed.
# `uv run` resolves the venv, installs dependencies, and executes the command.
dev-dependencies = []
