[project]
name = "cloudsufi-doc-qa"
version = "0.1.0"
description = "RAG-based Document Q&A system — CloudSufi Senior AI/ML Engineer Assignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "langchain>=0.3,<0.4",
    "langchain-chroma>=0.1.4,<0.2",
    "langchain-community>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-groq>=0.2,<0.3",
    "langchain-huggingface>=0.1,<0.2",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.40.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",   # coverage reporting
    "pytest-mock>=3.14.0", # cleaner mock syntax (optional but recommended)
]

[tool.pytest.ini_options]
testpaths     = ["tests"]
# --cov targets only service logic + config. main.py is excluded:
# Streamlit UI code requires browser automation (Playwright), not pytest.
addopts       = """
  --cov=services
  --cov=config
  --cov-report=term-missing
  --cov-report=html:htmlcov
  --cov-fail-under=80
"""

[tool.coverage.run]
omit = ["main.py", "tests/*", "vectorstore/*", "conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
